<resources>
    <string name="app_name">FastReding</string>
    <string name="training">тренировка</string>
    <string name="profile">профиль</string>
    <string name="information">информация</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_traning">Traning</string>
    <string name="plan_training">упражнения</string>
    <string name="statistics">статистика</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="under_line_6">_ _ _ _ _ _</string>
    <string name="letter">буква: </string>
    <string name="left">осталось: </string>
    <string name="ten">10</string>
    <string name="ready">готов</string>
    <string name="next_number">Следующее число: </string>
    <string name="_1">1</string>
    <string name="_0">0</string>


    <string name="exercise_1">Словопары</string>
    <string name="exercise_2">Таблица Шульта</string>
    <string name="exercise_3">Числа</string>
    <string name="exercise_4">Поиск букв</string>
    <string name="exercise_5">Четные числа</string>
    <string name="exercise_6">Разные слова</string>
    <string name="exercise_7">Предложения</string>
    <string name="exercise_8">Скорость чтения</string>
    <string name="next_exercise">следующее упражнение</string>
    <string name="your_result">Ваш результат</string>
    <string name="your_record">Ваш рекорд</string>
    <string name="text_app">Это идеальное приложение для увеличения скорости чтения в два раза, а также улучшения тренировка глаз и умственных способностей C помощью этого приложения Вы сможете быстрее и эффективнее читать и, прежде всего, лучше запоминать любые тексты. Приложение позволит выполнять Вашу повседневную работу, при этом тренируя технику чтения. Тренировка техники чтения еще никогда не была столь увлекательной! Техника Вашего скорочтения увеличится в два раза уже через несколько дней. Скорость чтения участников тестирования повышалась в среднем на 143% за 10 дней. У Вас уходит 30 минут в день на прочтение одной газеты? Скоро Вы начнёте читать две газеты и ещё одну главу специализированной литературы, не тратя при этом дополнительного времени! В игровой форме Вы освоите все необходимые способы эффективного чтения и существенно разовьёте своё скорочтение, это подразумевает: - быстрое распознавание чисел, букв и слов - свободные движения глаз - повышение способности концентрироваться - расширение диапазона зрения</string>
    <string name="speed_reading">Скорочтение</string>
    <string name="delete">с</string>
    <string name="best_exercise">Лучшее упражнение</string>
    <string name="lose_exercise">Худшее упражнение</string>
    <string name="middle_result">Средий результат</string>
    <string name="input_name">Введите имя</string>
    <string name="add">добавить</string>


</resources>
