<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.exercise.SearchLetter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letter"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/right_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/left"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/countLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />

    </LinearLayout>

    <GridView
        android:id="@+id/gridLetter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:columnWidth="35dp"
        android:horizontalSpacing="2dp"
        android:numColumns="10"
        android:padding="3dp"
        android:stretchMode="spacingWidthUniform"
        android:verticalSpacing="2dp" />

</LinearLayout>