<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.exercise.TableSchulte">

    <GridView
        android:id="@+id/gridNumbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="5dp"
        android:numColumns="5"
        android:verticalSpacing="5dp">

    </GridView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nextNumbersText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_number"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/nextNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />


</LinearLayout>
