<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ResultExercise">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/exercise_2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/your_result"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_weight="3"
            android:background="@color/yellow"/>

        <TextView
            android:id="@+id/your_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/exercise_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_weight="2"
            android:background="@color/blue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/your_record"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_weight="3"
            android:background="@color/yellow"/>

        <TextView
            android:id="@+id/your_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/exercise_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_weight="2"
            android:background="@color/blue" />

    </LinearLayout>

</LinearLayout>